<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GpsHandle</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_historical">Touch here to see historical</string>
    <string name="title_report">Report</string>
    <string name="title_administration">Administration</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="select_a_group">Select A Group</string>
    <string name="user_name">User Name</string>
    <string name="account_name">Account</string>
    <string name="password">Password</string>
    <string name="copyright">COPYRIGHT © 2015 UMAPS TECHNOLOGIES</string>
    <string name="hint_account_name">Enter account name</string>
    <string name="hint_user_name">Enter user name</string>
    <string name="hint_password">Enter password</string>
    <string name="button_login">Login</string>
    <string name="failure_login">Failed to login</string>
    <string name="network_failed">Network Failed!</string>
    <!--Cluster Popup on map-->
    <string name="deviceCountText">No. of Device</string>
    <string name="averageSpeedText">Average speed</string>
    <string name="deviceRunningCountText">No. of running</string>


    <string name="device_list">Devices List</string>
    <string name="company_name">UMAPS TECHNOLOGIES</string>
    <string name="company_address">No.12 Lane 81, Linh Lang Street, Cong Vi, Ba Dinh, Hanoi</string>
    <string name="company_tel">(+84) 046 686 5601</string>
    <string name="getting_group_device_list">Getting devices info</string>

    <string name="partners">International Partners</string>


    <string name="historical_30m">30m</string>
    <string name="historical_1h">1h</string>
    <string name="historical_6h">6h</string>
    <string name="historical_12h">12h</string>
    <string name="device_description">Description</string>
    <string name="device_position">Position</string>
    <string name="device_speedKph">SpeedKPH</string>
    <string name="device_odometer">Odometer</string>
    <string name="device_address">Address</string>

    <string name="status_running">Running</string>
    <string name="status_idling">Idling</string>
    <string name="status_stopped">Stopped</string>
    <string name="bar_events">Events</string>
    <string name="bar_odo_meter">Odometer</string>
    <string name="total_km">Km</string>
    <string name="total_events">Events</string>
    <string name="btn_settings">Settings</string>

    <string name="inline_preference">Inline Settings</string>
    <string name="title_checkbox_preference">Checkbox</string>
    <string name="title_setting_interval">Set interval</string>

    <string name="summary_checkbox_preference">Summary</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_history">History</string>
    <string name="txt_account_id">Account ID</string>
    <string name="txt_desc">Description</string>
    <string name="txt_display">Display Name</string>
    <string name="txt_account_contact_name">Contact Name</string>
    <string name="txt_account_contact_email">Contact Email</string>
    <string name="txt_account_contact_phone">Contact Phone</string>
    <string name="txt_account_device_count">Devices Count</string>
    <string name="txt_account_last_login">Last Login Time</string>
    <string name="txt_created_on">Created On</string>
    <string name="rpt_event_count_desc">Event/Distance chart</string>
    <string name="txt_user_id">User ID*</string>

    <string name="title_settings_about">About</string>
    <string name="no_history_events">No history event(s)</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="managed_groups">Managed Groups</string>
    <string name="managed_group_none">None</string>
    <string name="account_text">ACCOUNT</string>
    <string name="user_text">USER</string>
    <string name="group_text">GROUP</string>
    <string name="device_text">DEVICE</string>
    <string name="txt_group_id">Group ID</string>
    <string name="txt_last_update">Last Update Time</string>
    <string name="txt_group_device_list">Devices List</string>
    <string name="rpt_overview_text">Overview</string>
    <string name="rpt_event_count_text">Event Count</string>
    <string name="txt_device_id">Device ID</string>
    <string name="txt_is_active">Is Active</string>
    <string name="txt_serial_number">Serial Number</string>
    <string name="txt_sms_sent">SMS Sent</string>
    <string name="txt_sms_limited">SMS Limited</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_group_all">Group All</string>
    <string name="txt_save">Save</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_device_unique_id">Unique ID</string>
    <string name="hint_enter_unique_id">Ex: imei_12345678</string>
    <string name="hint_enter_device_id">Enter a deviceID</string>
    <string name="hint_enter_device_desc">Enter a description of device</string>
    <string name="hint_enter_display_name">Enter a display-name</string>
    <string name="hint_enter_is_active">Is Active?</string>
    <string name="hint_enter_serial_number">Enter serial number</string>
    <string name="hint_enter_sim_number">Enter sim number</string>
    <string name="hint_enter_sms_limited">Enter sms limit count</string>
    <string name="hint_enter_group_id">Enter groups ID</string>
    <string name="hint_notes">Enter a notes</string>
    <string name="failure_create_device">Failed to create device</string>
    <string name="_must_input_unique_id">You must enter an UniqueID</string>
    <string name="you_must_select_a_device">You must select a device!</string>
    <string name="are_you_sure">Are you sure to delete</string>
    <string name="txt_delete">Delete</string>
    <string name="you_dont_have_permission">You don\'t have permission!</string>
    <string name="hint_enter_group_desc">Enter description of group</string>
    <string name="_must_input_description">You must input a description or display name</string>
    <string name="failure_create_group">Failed to create group</string>
    <string name="hint_enter_user_id">Enter an user id</string>
    <string name="hint_enter_user_desc">Enter a description for user</string>
    <string name="txt_user_password">Password*</string>
    <string name="txt_user_contact_email">Contact Email*</string>
    <string name="failure_delete">Failed to delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="title_logout">Logout</string>
    <string name="faq_screen_title">Frequently asked questions</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="contact_info">Contact infomations</string>

    <string name="title_activity_dispatcher">DispatcherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="configuration">Configurations</string>
    <string name="tools">Tools</string>
</resources>
