<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_map_monitor"
            android:icon="@drawable/ic_map_white_48dp"
            android:title="@string/title_monitor" />
        <item android:id="@+id/nav_report"
            android:icon="@drawable/ic_equalizer_white_48dp"
            android:title="@string/title_report" />
        <item android:id="@+id/nav_administration"
            android:icon="@drawable/ic_edit_white_48dp"
            android:title="@string/title_administration" />
        <item android:id="@+id/nav_tools"
            android:icon="@drawable/ic_build_white_48dp"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/configuration">
        <menu>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_setting_dark"
                android:title="@string/action_settings" />
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_white_48dp"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>