<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l_edit_device"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:visibility="gone">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TableLayout
            android:background="@color/details_background"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_device_unique_id"
                    android:text="@string/txt_device_unique_id"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_unique_id_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:editable="false"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_unique_id"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_device_id"
                    android:text="@string/txt_device_id"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_id_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_device_id"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/txt_device_desc"
                    android:text="@string/txt_desc"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_desc_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_device_desc"/>
            </TableRow>
            <TableRow >
                <TextView
                    android:id="@+id/txt_device_display"
                    android:text="@string/txt_display"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_display_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_display_name"/>
            </TableRow>
            <TableRow >
                <TextView
                    android:id="@+id/txt_is_active"
                    android:text="@string/txt_is_active"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <LinearLayout>
                    <Switch
                        android:id="@+id/txt_is_active_content"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                </LinearLayout>
            </TableRow>
            <TableRow >
                <TextView
                    android:id="@+id/txt_device_serial_number"
                    android:text="@string/txt_serial_number"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_serial_number_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_serial_number"/>
            </TableRow>
            <TableRow >
                <TextView
                    android:id="@+id/txt_device_sim_number"
                    android:text="@string/txt_serial_number"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_sim_number_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_sim_number"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/txt_device_sms_limited"
                    android:text="@string/txt_sms_limited"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_sms_limited_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_sms_limited"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/txt_group_id"
                    android:text="@string/txt_group_id"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_group_id_content"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:textColor="@color/text_color_dark"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_group_id"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/txt_device_notes"
                    android:text="@string/txt_notes"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_device_notes_content"
                    android:textColor="@color/text_color_dark"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="false"
                    android:layout_weight="1"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_notes"/>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:id="@+id/btn_control_add_device"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_save"
                android:text="@string/txt_save"
                android:layout_marginRight="10dp"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/txt_cancel"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
