<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l_edit_group"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:visibility="gone">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TableLayout
            android:background="@color/details_background"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:id="@+id/txt_group_desc"
                    android:text="@string/txt_desc"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_group_desc_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_group_desc"/>
            </TableRow>
            <TableRow >
                <TextView
                    android:id="@+id/txt_group_display"
                    android:text="@string/txt_display"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_group_display_content"
                    android:textColor="@color/text_color_dark"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_enter_display_name"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/txt_notes"
                    android:text="@string/txt_notes"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/txt_notes_content"
                    android:textColor="@color/text_color_dark"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="false"
                    android:layout_weight="1"
                    android:textColorHint="@color/base_color_light"
                    android:hint="@string/hint_notes"/>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:id="@+id/btn_control_add_group"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_save"
                android:text="@string/txt_save"
                android:layout_marginRight="10dp"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/txt_cancel"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
