<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*"
    android:padding="10dp"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/white_opacity_95">
    <TableLayout>
        <TableRow>
            <TextView
                android:id="@+id/tDesc"
                android:text="@string/device_description"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/cDesc"
                android:gravity="start"
                android:textColor="@color/textColor"
                android:padding="3dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/titlePosition"
                android:text="@string/device_position"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/contentPosition"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tSpeed"
                android:text="@string/device_speedKph"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/cSpeed"
                android:textColor="@color/textColor"
                android:padding="3dip"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tOdom"
                android:text="@string/device_odometer"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/cOdom"
                android:padding="3dip"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/titleAddr"
                android:text="@string/device_address"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/contentAddr"
                android:gravity="start"
                android:padding="3dip"
                android:singleLine="false"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
    <TableLayout>
        <TableRow>
            <Button
                android:id="@+id/btn_historical_30m"
                android:layout_weight="1"
                android:text="@string/historical_30m"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:focusable="false"/>
            <Button
                android:id="@+id/btn_historical_60m"
                android:layout_weight="1"
                android:text="@string/historical_1h"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:focusable="false"/>
            <Button
                android:id="@+id/btn_historical_6h"
                android:layout_weight="1"
                android:text="@string/historical_6h"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:focusable="false"/>
            <Button
                android:id="@+id/btn_historical_12h"
                android:layout_weight="1"
                android:text="@string/historical_12h"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:focusable="false"/>
        </TableRow>
    </TableLayout>
</TableLayout>