<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_info_layout"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_marginBottom="?attr/actionBarSize"
    android:background="@color/details_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txt_group_id"
            android:text="@string/txt_group_id"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/txt_group_id_content"
            android:textColor="@color/text_color_dark"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txt_group_desc"
            android:text="@string/txt_desc"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/txt_group_desc_content"
            android:textColor="@color/text_color_dark"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow  android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txt_group_display"
            android:text="@string/txt_display"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/txt_group_display_content"
            android:textColor="@color/text_color_dark"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txt_group_last_update"
            android:text="@string/txt_last_update"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/txt_group_last_update_content"
            android:textColor="@color/text_color_dark"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txt_group_creation"
            android:text="@string/txt_created_on"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/txt_group_creation_content"
            android:textColor="@color/text_color_dark"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow android:paddingBottom="10dp">
        <TextView
            android:id="@+id/txt_group_device_list"
            android:text="@string/txt_group_device_list"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/group_device_list"
            android:textColor="@color/text_color_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>